update: (dark mode): se añade darkmode

--- a/src/components/sections/Experience.astro
+++ b/src/components/sections/Experience.astro
@@ -62,4 +62,8 @@ import { work } from "@cv"
         color: #555;
         font-size: .85rem;
     }
+
+    footer {
+        border-top: none !important;
+    }
 </style>
