--- a/src/components/sections/Hero.astro
+++ b/src/components/sections/Hero.astro
@@ -7,6 +7,7 @@ import X from '@icons/X.astro'
 import LinkedIn from '@icons/LinkedIn.astro'
 import GitHub from '@icons/GitHub.astro'
 import WorldMap from '@icons/WorldMap.astro'
+import ImageProfile from '@components/ImageProfile.astro'
 
 const {name, label, image, location, profiles, phone, email} = basics
 const { city, region } = location
@@ -76,9 +77,7 @@ const printInfo = [email, phone, linkedUrl ].filter(Boolean).join(" • ")
                 }
             </footer>
         </div>
-        <figure>
-            <img src={image} alt={name}>
-        </figure>
+       <ImageProfile />
     </div>
 </Section>
 
@@ -132,12 +131,6 @@ const printInfo = [email, phone, linkedUrl ].filter(Boolean).join(" • ")
         text-wrap: balance;
     }
 
-    img {
-        aspect-ratio: 1 / 1;
-        object-fit: cover;
-        width: 128px;
-    }
-
     span {
         color: #666;
         display: flex;
@@ -153,6 +146,7 @@ const printInfo = [email, phone, linkedUrl ].filter(Boolean).join(" • ")
         display: flex;
         gap: 4px;
         margin-top: 8px;
+        border-top: none!important;
     }
 
     footer a {
