--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,69 +1,202 @@
 ---
+import SwitchDarkMode from "../components/SwitchDarkMode.astro";
+import { basics } from "@cv";
 interface Props {
-	title: string;
+  title: string;
 }
 
 const { title } = Astro.props;
+const { image, summary } = basics;
 ---
 
 <!doctype html>
 <html lang="es">
-	<head>
-		<meta charset="UTF-8" />
-		<meta name="description" content="Astro description" />
-		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="description" content="Kelvin Guerrero - Desarrollador Web especializado en JavaScript, HTML y CSS. Encuentra aquí mi curriculum y proyectos.">
-		<meta name="keywords" content="Kelvin Guerrero, desarrollador web, JavaScript, HTML, CSS, curriculum, proyectos">
-		<meta name="author" content="Kelvin Guerrero">
-		<meta property="og:title" content="Kelvin Guerrero - Desarrollador Web">
-		<meta property="og:description" content="¡Hola! Soy Kelvin Guerrero, un apasionado desarrollador web especializado en JavaScript, HTML y CSS. Aquí encontrarás mi curriculum y proyectos.">
-        <meta property="og:image" content="/portada.png" />
-		<meta property="og:url" content="https://cv.kelvinguerrero.dev">
-    	<meta property="og:type" content="website">
-		<title>{title}</title>
-	</head>
-	<body>
-		<slot />
-	</body>
+  <head>
+    <meta charset="UTF-8" />
+    <title>{title}</title>
+    <meta name="description" content={summary} />
+    <meta name="viewport" content="width=device-width" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="preload" as="image" href={image} />
+
+    <meta
+      name="description"
+      content="Manuel Retamozo - Desarrollador Web Fullstack especializado en Frontend con Angular y Nextjs. Encuentra aquí mi curriculum y proyectos."
+    />
+    <meta
+      name="keywords"
+      content="Manuel Michael Retamozo García, desarrollador web, Angular, React, Nextjs, .NET, JavaScript, TypeScript, HTML, CSS, curriculum, proyectos, contacto"
+    />
+    <meta name="author" content="Manuel Retamozo" />
+    <meta property="og:title" content="Manuel Retamozo - Desarrollador Web" />
+    <meta
+      property="og:description"
+      content="¡Hola! Soy Manuel Retamozo, un apasionado desarrollador web fullstack especializado en Frontend con Angular y Nextjs. Aquí encontrarás mi curriculum y proyectos."
+    />
+    <meta property="og:image" content="/portada.png" />
+    <meta property="og:url" content="https://cv.mretamozo.com" />
+    <meta property="og:type" content="website" />
+  </head>
+  <body>
+    <SwitchDarkMode />
+    <slot />
+  </body>
 </html>
 <style is:global>
-	html {
-		font-family: Menlo, Monaco, Lucida Console, 'Courier New', monospace;
-		background: #fff;
-		letter-spacing: -0.025rem;
-	}
+  :root {
+    --dark-primary: #222831;
+  }
+  html {
+    font-family:
+      Menlo,
+      Monaco,
+      Lucida Console,
+      "Courier New",
+      monospace;
+    background: #fff;
+    letter-spacing: -0.025rem;
+  }
 
-	body,
-	figure{
-		margin: 0;
-		padding: 0;
-	}
+  .dark {
+    background: #171717;
+    color: #f5f5f5;
 
-	a {
-		text-decoration: none;
-	}
+    & .img {
+      border: 3px solid #eeeeee57;
+      border-radius: 50%;
+    }
 
-	ul {
-		list-style: none;
-		margin: 0;
-		padding: 0;
-	}
+    & p {
+      color: #eee;
+    }
 
-	*, *::before, *::after {
-		box-sizing: border-box;
-	}
+    & .info span,
+    footer no-print {
+      color: #a5a5a5 !important;
+		border-top: none;
+      & a {
+        color: #e1e1e1 !important;
+      }
 
-	h1, h2, h3, h4 {
-		margin: 0;
-		font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-	}
+      & a:hover {
+        color: #050505 !important;
+      }
+    }
 
-	p {
-		color: #666;
-		font-size: .9rem;
-		line-height: 1.5;
-		margin: 0;
-		text-wrap: pretty;
-	}
+    & h2 {
+      color: #e1e1e1 !important;
+    }
+
+    & h3 {
+      color: #e1e1e1 !important;
+    }
+
+    & h4,
+    time {
+      color: #a3a3a3 !important;
+    }
+
+    & a {
+      color: #dbdbdb !important;
+    }
+
+    & a:hover {
+      color: #717171 !important;
+    }
+
+    & footer span {
+      background: #e1e1e1 !important;
+    }
+
+    & footer,
+    ninja-keys {
+      background: #171717 !important;
+      border-top: 1px solid #2d2b2b !important;
+      & kbd {
+        background: #424242 !important;
+      }
+    }
+  }
+
+  body,
+  figure {
+    margin: 0;
+    padding: 0;
+  }
+
+  a {
+    text-decoration: none;
+  }
+
+  ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+  }
+
+  *,
+  *::before,
+  *::after {
+    box-sizing: border-box;
+  }
+
+  h1,
+  h2,
+  h3,
+  h4 {
+    margin: 0;
+    font-family:
+      system-ui,
+      -apple-system,
+      BlinkMacSystemFont,
+      "Segoe UI",
+      Roboto,
+      Oxygen,
+      Ubuntu,
+      Cantarell,
+      "Open Sans",
+      "Helvetica Neue",
+      sans-serif;
+  }
+
+  p {
+    color: #666;
+    font-size: 0.9rem;
+    line-height: 1.5;
+    margin: 0;
+    text-wrap: pretty;
+  }
+
+  @supports selector(::-webkit-scrollbar) {
+    ::-webkit-scrollbar {
+      width: 10px;
+      border-radius: 10px;
+    }
+
+    ::-webkit-scrollbar-thumb {
+      border-radius: 10px;
+      background-color: theme("colors.primary");
+      border: 2px solid transparent;
+      background-clip: content-box;
+    }
+
+    ::-webkit-scrollbar-thumb:active {
+      background-color: #303030;
+    }
+
+    ::-webkit-scrollbar-track {
+      background: rgba(84, 84, 84, 0.039);
+    }
+
+    ::-webkit-scrollbar-corner {
+      background: black;
+    }
+  }
+
+  @supports not selector(::-webkit-scrollbar) {
+    * {
+      scrollbar-color: theme("colors.primary") transparent;
+      scrollbar-width: thin;
+    }
+  }
 </style>
