--- a/src/components/ImageProfile.astro
+++ b/src/components/ImageProfile.astro
@@ -1,7 +1,7 @@
 ---
 import { basics } from "@cv";
 import { Picture } from "astro:assets";
-import localProfileImage from "../../public/me.webp";
+import localProfileImage from "../assets/me.webp";
 
 const { name } = basics;
 ---
