cambio de portada

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -33,7 +33,7 @@ const { image, summary } = basics;
       property="og:description"
       content="¡Hola! Soy Manuel Retamozo, un apasionado desarrollador web fullstack especializado en Frontend con Angular y Nextjs. Aquí encontrarás mi curriculum y proyectos."
     />
-    <meta property="og:image" content="/portada.png" />
+    <meta property="og:image" content="/portada.webp" />
     <meta property="og:url" content="https://cv.mretamozo.com" />
     <meta property="og:type" content="website" />
   </head>
