Se añade estilos de impresión para ocultar elementos no imprimibles

--- a/src/components/SwitchDarkMode.astro
+++ b/src/components/SwitchDarkMode.astro
@@ -66,6 +66,12 @@
   input:checked + .slider:before {
     transform: translateX(2.8em) rotate(360deg);
   }
+
+  @media print {
+    .no-print {
+      display: none;
+    }
+  }
 </style>
 
 <script>
