--- a/src/components/sections/Experience.astro
+++ b/src/components/sections/Experience.astro
@@ -1,69 +1,106 @@
 ---
 import Section from "@components/Section.astro";
 
-import { work } from "@cv"
+import { work } from "@cv";
 ---
 
 <Section title="Experiencia laboral">
-    <ul>
-        {
-            work.map(({ name, startDate, endDate, position, summary}) => {
-                const startYear = new Date(startDate).getFullYear()
-                const endYear = endDate != null ? new Date(endDate).getFullYear() : "Actual"
-                const years = ` ${startYear} - ${endYear}`
+  <ul>
+    {
+      work.map(({ name, startDate, endDate, position, summary }) => {
+        const startYear = new Date(startDate).getFullYear();
+        const endYear =
+          endDate != null ? new Date(endDate).getFullYear() : "Actual";
+        const years = ` ${startYear} - ${endYear}`;
 
-                return (
-                    <li>
-                        <article>
-                            <header>
-                                <div>
-                                    <h3>{name}</h3>
-                                    <h4>{position}</h4>
-                                </div>
-                                <time>{years}</time>
-                            </header>
+        return (
+          <li>
+            <article>
+              <header>
+                <div>
+                  <h3>{name}</h3>
+                  <h4>{position}</h4>
+                </div>
+                <div>
+                  <time datetime={startDate} data-title={startDate}>{startYear}</time> -{" "}
+                  <time datetime={endDate} data-title={endDate}>{endYear}</time>
+                </div>
+              </header>
 
-                            <footer>
-                                <p>{summary}</p>
-                            </footer>
-                        </article>
-                    </li>
-                )
-            })
-        }
-    </ul>
+              <footer>
+                <p>{summary}</p>
+              </footer>
+            </article>
+          </li>
+        );
+      })
+    }
+  </ul>
 </Section>
 
 <style>
-    ul {
-        display: flex;
-        flex-direction: column;
-        gap: 32px;
-    }
+  ul {
+    display: flex;
+    flex-direction: column;
+    gap: 32px;
+  }
 
-    article h3 {
-        font-weight: 500;
-        color: #111;
-    }
+  article h3 {
+    font-weight: 500;
+    color: #111;
+  }
 
-    article h4 {
-        color: #222;
-        font-weight: 400;
-    }
+  article h4 {
+    color: #222;
+    font-weight: 400;
+  }
 
-    header {
-        display: flex;
-        justify-content: space-between;
-        align-items: flex-start;
-        margin-bottom: 4px;
-    }
+  header {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+    margin-bottom: 4px;
+  }
 
+  time {
+    color: #555;
+    font-size: 0.85rem;
+  }
+
+  footer {
+    border-top: none !important;
+  }
+
+  [data-title]:hover:after {
+    opacity: 1;
+    transition: all 0.1s ease-in-out 0.5s;
+    visibility: visible;
+  }
+  [data-title]:after {
+    content: attr(data-title);
+    background-color: #333;
+    color: #fff;
+    font-size: .75rem;
+    font-family: Menlo, Monaco, Lucida Console, "Courier New", monospace;;
+    position: absolute;
+    padding: .2rem .5rem;
+    bottom: -1.4rem;
+    left: 95%;
+    white-space: nowrap;
+    box-shadow: 1px 1px 1px #222222;
+    opacity: 0;
+    border: 1px solid #111111;
+    z-index: 99999;
+    visibility: hidden;
+    border-radius: 6px;
+  }
+  [data-title] {
+    position: relative;
+  }
+  
+  @media (width <= 700px) {
     time {
-        color: #555;
-        font-size: .85rem;
+      text-align: right;
     }
-
-    footer {
-        border-top: none !important;
-    }
+  }
 </style>
