--- a/src/components/sections/Skills.astro
+++ b/src/components/sections/Skills.astro
@@ -29,4 +29,10 @@ import { skills } from "@cv"
         font-weight: 500;
         padding: 0.2rem 0.6rem;
     }
+
+    /* Dark mode*/
+    html.dark li {
+        background: #333;
+        color: white;
+    }
 </style>
