--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -67,19 +67,21 @@ const { image, summary } = basics;
     }
 
     & p {
-      color: #eee;
+      color: #a8a095;
     }
 
     & .info span,
     footer no-print {
-      color: #a5a5a5 !important;
-		border-top: none;
+      color: #a8a095 !important;
+		  border-top: none;
       & a {
-        color: #e1e1e1 !important;
+        color: #9d9488 !important;
+        border-color: #35393b !important;
       }
 
       & a:hover {
         color: #050505 !important;
+        background-color: #222426;
       }
     }
 
@@ -88,20 +90,25 @@ const { image, summary } = basics;
     }
 
     & h3 {
-      color: #e1e1e1 !important;
+      color: #dddad6 !important;
     }
 
     & h4,
     time {
-      color: #a3a3a3 !important;
+      color: #d3cfc9 !important;
     }
 
     & a {
-      color: #dbdbdb !important;
+      color: #9d9488 !important;
+      border-color: #35393b !important;
     }
 
     & a:hover {
       color: #717171 !important;
+      background-color: #222426 !important;
+      background: #eee;
+      border: 1px solid #ddd !important;
+      border-color: #3a3e41 !important;
     }
 
     & footer span {
